--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Daniel Goss</title>
+    <script src="https://use.fontawesome.com/942691f025.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="main.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arvo&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -22,7 +28,7 @@
             <a href="#about" class="nav-link">About</a>
           </li>
           <li>
-            <a href="#services" class="nav-link">Services</a>
+            <a href="#skills" class="nav-link">Skills</a>
           </li>
           <li>
             <a href="#portfolio" class="nav-link">Portfolio</a>
@@ -43,65 +49,77 @@
 
     <section class="about" id="about">
       <div class="container">
-        <div class="profile-img">
-          <img src="assets/images/profile.jpeg" alt="" />
+        <div class="profile-img" data-aos="fade-right" data-aos-delay="150">
+          <img src="assets/images/profile.jpg" alt="" />
         </div>
-        <div class="about-details">
+        <div class="about-details" data-aos="fade-left" data-aos-delay="150">
           <div class="about-heading">
             <h1>About</h1>
             <h6>Myself</h6>
           </div>
-          <p>Lorem Epsun</p>
-        </div>
-        <div class="social-media">
-          <ul class="nav-list">
-            <li>
-              <a href="#" class="icon-link">
-                <i class="fab fa-linkedin-square"></i>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="icon-link">
-                <i class="fab fa-github-square"></i>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="icon-link">
-                <i class="fab fa-twitter-square"></i>
-              </a>
-            </li>
-          </ul>
+          <p>
+            Hard working and pationate programmer with one year of experience
+            working as a front-end javacript developer and automation test
+            engineer. Proficient in LitElement and Mocha/Chai libraries, user
+            interface testing, and debugging processes. Valuable team player,
+            goal orriented and knowledgeable. Able to effectively self-manage
+            during independent projects, as well as collaborate in a team
+            setting. Attaining bachelours degree in Computer Science from San
+            Diego State University.
+          </p>
+          <div class="social-media">
+            <ul class="nav-list">
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/daniel-goss-a8ab65132/"
+                  class="icon-link"
+                >
+                  <i class="fa fa-linkedin"></i>
+                </a>
+              </li>
+              <li>
+                <a href="http://github.com/daniilgoss" class="icon-link">
+                  <i class="fa fa-github-square"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://twitter.com/daniilgoss" class="icon-link">
+                  <i class="fa fa-twitter-square"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
 
-    <section class="services" id="services">
+    <section class="skills" id="skills">
       <div class="container">
         <div class="section-heading">
-          <h1>Services</h1>
-          <h6>What I can do for you baby</h6>
+          <h1>Skills</h1>
+          <h6>What I can do for you</h6>
         </div>
         <div class="my-skills">
-          <div class="skill">
+          <div class="skill" data-aos="fade-in" data-aos-delay="150">
             <div class="icon-container">
-              <i class="fas fa-layer-group"></i>
+              <i class="fa fa-adjust"></i>
             </div>
-            <h1>Web Design</h1>
-            <p>Lauren Epsum</p>
+            <h1>Web Development/Design</h1>
+            <p></p>
           </div>
-          <div class="skill">
+          <div class="skill" data-aos="fade-in" data-aos-delay="150">
             <div class="icon-container">
-              <i class="fas fa-code-group"></i>
+              <i class="fa fa-code"></i>
             </div>
-            <h1>Web Design</h1>
-            <p>Lauren Epsum</p>
+            <h1>Software Development</h1>
+            <p></p>
           </div>
-          <div class="skill">
+          <div class="skill" data-aos="fade-in" data-aos-delay="150">
             <div class="icon-container">
-              <i class="fas fa-chart-group"></i>
+              <i class="fa fa-bar-chart"></i>
             </div>
-            <h1>Web Design</h1>
-            <p>Lauren Epsum</p>
+            <h1>Automation Engineer</h1>
+            <p></p>
           </div>
         </div>
       </div>
@@ -114,40 +132,110 @@
           <h6>View some of my recent work</h6>
         </div>
         <div class="portfolio-item">
-          <div class="portfolio-img">
-            <img src="/assets/images/portitem1.jpeg" alt="" />
+          <div
+            class="portfolio-img has-margin-right"
+            data-aos="fade-right"
+            data-aos-delay="150"
+          >
+            <img src="/assets/images/gara.png" alt="" />
           </div>
-          <div class="portfolio-description">
+          <div
+            class="portfolio-description"
+            data-aos="fade-left"
+            data-aos-delay="150"
+          >
             <h6>Web Development</h6>
-            <h1>Dr. Gara</h1>
-            <p>Laurem Epsum Baby</p>
-            <a href="#" class="cta">View Details</a>
+            <h1>Gi and Liver Insitute</h1>
+            <p>
+              Designed, built, and deployed Dr. Gara's website to help him
+              expand his business and communication with his patients
+            </p>
+            <a href="http://www.giandliver.org" class="cta"
+              >Check out Dr. Gara's site</a
+            >
           </div>
         </div>
         <div class="portfolio-item">
-          <div class="portfolio-description">
+          <div
+            class="portfolio-description has-margin-right"
+            data-aos="fade-right"
+            data-aos-delay="150"
+          >
             <h6>3D game design</h6>
             <h1>Zombie Survival Game</h1>
-            <p>Link to my bitbucket!</p>
-            <a href="#" class="cta">View Details</a>
+            <p>
+              Designed and developed a 3D game using Unity and C#
+            </p>
+            <a
+              href="https://bitbucket.org/daniilgoss/3d-game/src/master/"
+              class="cta"
+              >Check it out on my BitBucket!</a
+            >
           </div>
-          <div class="portfolio-img">
-            <img src="/assets/images/portitem2.jpeg" alt="" />
+          <div class="portfolio-img" data-aos="fade-left" data-aos-delay="150">
+            <img src="/assets/images/unity.png" alt="" />
           </div>
         </div>
         <div class="portfolio-item">
-          <div class="portfolio-description">
-            <h6>Software Engineering</h6>
-            <h1>Nebula</h1>
-            <p>Fancy shamcy lettering for my current job</p>
-            <a href="#" class="cta">View Details</a>
+          <div
+            class="portfolio-img has-margin-right"
+            data-aos="fade-right"
+            data-aos-delay="150"
+          >
+            <img src="/assets/images/CT-Logo.png" alt="" />
           </div>
-          <div class="portfolio-img">
-            <img src="/assets/images/portitem3.jpeg" alt="" />
+          <div
+            class="portfolio-description"
+            data-aos="fade-left"
+            data-aos-delay="150"
+          >
+            <h6>Software Engineering</h6>
+            <h1>Chirotouch</h1>
+            <p>
+              Currently working at Chirotouch as software engineer intern.
+              Broadening my exposure to Node.Js, LitElement, HTML, CSS, MySql,
+              CI/CD integration, Bitbucket pipeline configuration, as well as
+              unit and integration testing
+            </p>
+            <a href="https://www.chirotouch.com/" class="cta"
+              >Check out our application</a
+            >
           </div>
         </div>
       </div>
     </section>
+
+    <section class="experience" id="experience">
+      <div class="container">
+        <div class="section-heading">
+          <h1>Work Experience</h1>
+          <h6>Past and current jobs</h6>
+        </div>
+        <div class="timeline" data-aos="fade-down" data-aos-delay="150">
+          <ul>
+            <li class="date" data-date="2018 - Present">
+              <h1>Chirotouch</h1>
+              <p>Associate Software Engineering Intern II</p>
+            </li>
+            <li class="date" data-date="2016 - 2018">
+              <h1>Pipette.com</h1>
+              <p>Help Desk Technician</p>
+            </li>
+            <li class="date" data-date="2011 - 2016">
+              <h1>Medical Billing Strategies</h1>
+              <p>Help Desk Technician</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <footer class="copyright">
+      <div class="up" id="up">
+        <i class="fa fa-chevron-up"></i>
+      </div>
+      <p>&copy; 2020 Daniel Goss</p>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
